# Scrap-Mechanic-Logic-Tools

./: Prefabs.py  README.md  blocks.py  color_list.py  config.txt  example.py  sm_helpers.py
ScrapMechanicLogicTools/: blocks.py  color_list.py  pyproject.toml  sm_helpers.py
test/path/Blueprints/0d1ecb3e-a836-40c0-a35b-bfd22f6812ae/: blueprint.json
