[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ScrapMechanicLogicTools"
version = "0.5.6"
dependencies = []
authors = [
  { name="Inventorsteve"},
]
description = "Scrap Mechanic Library for Blueprint manipulation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.urls]
Homepage = "https://github.com/lnventorsteve/Scrap-Mechanic-Logic-Tools"
Issues = "https://github.com/lnventorsteve/Scrap-Mechanic-Logic-Tools/issues"
